<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:background="@drawable/background">
    <TextView android:id="@+id/TextView07" android:layout_width="50dp" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:background="@color/textcolor" android:textSize="15sp" android:layout_alignTop="@+id/textView4" android:layout_alignLeft="@+id/TextView05" android:textColor="@color/myred" android:text="@string/hundred_float"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="top" android:textSize="20sp" android:id="@+id/TextView12" android:text="@string/tripKMpl" android:layout_alignBottom="@+id/TextView13" android:layout_alignLeft="@+id/TextView04"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/black" android:layout_width="50dp" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="15sp" android:background="@color/textcolor" android:id="@+id/TextView13" android:layout_below="@+id/TextView08" android:layout_alignLeft="@+id/TextView08" android:layout_marginTop="14dp" android:text="@string/hundred_float"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="15sp" android:id="@+id/textView3" android:text="@string/tripFuelWastage" android:layout_below="@+id/textView2" android:layout_toLeftOf="@+id/TextView06" android:layout_marginTop="16dp"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="15sp" android:id="@+id/textView4" android:text="@string/gearshift" android:layout_below="@+id/TextView05" android:layout_alignRight="@+id/textView1" android:layout_marginTop="14dp"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="top" android:textSize="15sp" android:id="@+id/TextView18" android:text="@string/fuel_unit" android:layout_alignTop="@+id/TextView07" android:layout_alignLeft="@+id/TextView17"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="top" android:textSize="15sp" android:id="@+id/TextView17" android:text="@string/fuel_unit" android:layout_above="@+id/textView4" android:layout_alignLeft="@+id/TextView16"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="top" android:textSize="20sp" android:id="@+id/TextView04" android:text="@string/tripDistance" android:layout_below="@+id/textView5" android:layout_alignLeft="@+id/textView6" android:layout_marginTop="31dp"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/black" android:layout_width="50dp" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="15sp" android:background="@color/textcolor" android:id="@+id/TextView08" android:layout_alignBottom="@+id/TextView04" android:layout_toRightOf="@+id/textView2" android:text="@string/hundred_float"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="top" android:textSize="15sp" android:id="@+id/TextView01" android:text="@string/distance_unit" android:layout_alignBaseline="@+id/TextView08" android:layout_alignBottom="@+id/TextView08" android:layout_alignLeft="@+id/TextView15"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="top" android:textSize="15sp" android:id="@+id/TextView14" android:text="@string/mileage_unit" android:layout_alignBaseline="@+id/TextView12" android:layout_alignBottom="@+id/TextView12" android:layout_alignLeft="@+id/TextView01"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="15sp" android:id="@+id/textView7" android:text="@string/litres" android:layout_alignBaseline="@+id/TextView02" android:layout_alignBottom="@+id/TextView02" android:layout_toLeftOf="@+id/exitButton"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/myred" android:hapticFeedbackEnabled="true" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="15sp" android:filterTouchesWhenObscured="true" android:background="@color/textcolor" android:id="@+id/TextView10" android:layout_alignTop="@+id/TextView18" android:layout_toRightOf="@+id/TextView01" android:layout_width="60dp" android:text="@string/thousand"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/myred" android:layout_width="50dp" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="15sp" android:background="@color/textcolor" android:id="@+id/TextView06" android:isScrollContainer="true" android:layout_alignBaseline="@+id/textView3" android:layout_alignBottom="@+id/textView3" android:layout_alignLeft="@+id/textView8" android:text="@string/hundred_float"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="top" android:textSize="15sp" android:id="@+id/TextView15" android:text="@string/fuel_unit" android:layout_alignTop="@+id/textView8" android:layout_toLeftOf="@+id/TextView19"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/black" android:layout_width="50dp" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="top" android:textSize="15sp" android:freezesText="true" android:background="@color/textcolor" android:id="@+id/textView8" android:layout_above="@+id/textView3" android:layout_alignLeft="@+id/textView7" android:text="@string/hundred_float"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="15sp" android:id="@+id/textView1" android:text="@string/idling" android:layout_above="@+id/textView4" android:layout_toRightOf="@+id/TextView12"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/myred" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="15sp" android:background="@color/textcolor" android:id="@+id/TextView09" android:layout_below="@+id/TextView11" android:layout_alignLeft="@+id/TextView11" android:layout_marginTop="16dp" android:layout_width="60dp" android:text="@string/thousand"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/myred" android:layout_width="50dp" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="15sp" android:background="@color/textcolor" android:id="@+id/TextView05" android:layout_alignBaseline="@+id/TextView09" android:layout_alignBottom="@+id/TextView09" android:layout_alignLeft="@+id/TextView06" android:text="@string/hundred_float"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="15sp" android:id="@+id/TextView02" android:text="@string/cost" android:layout_alignTop="@+id/textView2" android:layout_toRightOf="@+id/TextView01"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:gravity="top" android:textSize="15sp" android:id="@+id/textView2" android:text="@string/tripFuelConsumption" android:layout_below="@+id/TextView12" android:layout_alignLeft="@+id/TextView12" android:layout_marginTop="27dp" android:layout_toLeftOf="@+id/textView7"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="top" android:textSize="15sp" android:id="@+id/TextView16" android:text="@string/fuel_unit" android:layout_alignTop="@+id/TextView11" android:layout_toLeftOf="@+id/TextView19"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/black" android:layout_width="60dp" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="15sp" android:background="@color/textcolor" android:id="@+id/TextView03" android:layout_above="@+id/textView3" android:layout_toRightOf="@+id/TextView01" android:text="@string/thousand"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/myred" android:textAppearance="?android:attr/textAppearanceLarge" android:focusableInTouchMode="true" android:textSize="15sp" android:background="@color/textcolor" android:id="@+id/TextView11" android:layout_alignBaseline="@+id/TextView06" android:layout_alignBottom="@+id/TextView06" android:layout_alignLeft="@+id/TextView03" android:layout_width="60dp" android:text="@string/thousand"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/myColor" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="22sp" android:id="@+id/TextView19" android:text="@string/points" android:layout_alignBaseline="@+id/textView9" android:layout_alignBottom="@+id/textView9" android:layout_alignParentRight="true" android:layout_marginRight="18dp"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/myColor" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="22sp" android:id="@+id/textView6" android:text="@string/tripScore" android:layout_alignBaseline="@+id/textView9" android:layout_alignBottom="@+id/textView9" android:layout_alignLeft="@+id/textView3"></TextView>
    <TextView android:layout_height="wrap_content" android:textColor="@color/myColor" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="30sp" android:id="@+id/textView5" android:layout_alignParentTop="true" android:layout_alignRight="@+id/TextView02" android:layout_marginTop="32dp" android:text="@string/tripInfo"></TextView>
    <TextView android:textSize="30sp" android:filterTouchesWhenObscured="true" android:textAppearance="?android:attr/textAppearanceLarge" android:background="@color/black" android:id="@+id/textView9" android:text="@string/hundred_int" android:textColor="@color/myColor" android:layout_height="wrap_content" android:layout_width="100dp" android:gravity="right" android:layout_below="@+id/TextView07" android:layout_toLeftOf="@+id/TextView18" android:layout_marginTop="36dp" android:layout_toRightOf="@+id/textView6"></TextView>
    <Button android:text="@string/back" android:id="@+id/backButton" android:layout_height="wrap_content" android:layout_width="100dp" android:layout_alignParentBottom="true" android:layout_toLeftOf="@+id/textView4"></Button>
    <Button android:text="@string/exit" android:id="@+id/exitButton" android:layout_height="wrap_content" android:layout_width="100dp" android:layout_alignParentBottom="true" android:layout_alignRight="@+id/TextView19"></Button>
    <Button android:text="@string/history" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:id="@+id/historyButton"></Button>
    
    
</RelativeLayout>
