<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginLeft="100dp" android:text="@string/settings" android:textColor="@color/myColor"></TextView>
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/idlingTime" android:layout_height="wrap_content" android:id="@+id/TextView01" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true" android:layout_marginLeft="27dp" android:layout_marginTop="37dp" android:layout_alignRight="@+id/textView1"></TextView>
    <EditText android:inputType="number" android:layout_height="wrap_content" android:layout_alignBottom="@+id/TextView01" android:layout_toRightOf="@+id/TextView01" android:layout_width="100dp" android:id="@+id/idlingEditText">
        <requestFocus></requestFocus>
    </EditText>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/TextView01" android:layout_marginTop="36dp" android:layout_alignLeft="@+id/textView1" android:id="@+id/saveButton" android:text="@string/save" android:layout_alignRight="@+id/TextView01"></Button>
    
</RelativeLayout>
